# aws-lambda-wasm-runtime

./: 404.html  README.md  index.html
_next/static/ThIWg4TyTJfpoqhoGUj89/: _buildManifest.js
_next/static/chunks/pages/: index-2f82b84e2ee0ee7c161d.js
api/: grayscale.wasm  hello.js
api/functions/image-grayscale/: Cargo.toml
api/functions/image-grayscale/src/: main.rs
