[package]
name = "wasi_netlify_example"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[[bin]]
name = "grayscale"
path = "src/main.rs"

[dependencies]
hex = "0.4"
wasm-bindgen = "0.2.59"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde-wasm-bindgen = "0.4"
